# rust-api

./: Cargo.toml  Dockerfile  docker-compose.yml
public/: index.html
src/: main.rs
